add API Inquiry

--- a/.env
+++ b/.env
@@ -37,6 +37,10 @@ BLOB_CONTAINER=users
 LINK_USER=https://lentick-api-user-dev.azurewebsites.net
 LINK_NOTIF=https://lentick-api-notification-dev.azurewebsites.net
 
-DOKU_SHARED_KEY=
-DOKU_MALL_ID=
+DOKU_SHARED_KEY=d9E2c5Fc6LSw
+DOKU_MALL_ID=5019
 BYPASS_DOKU=1
+
+DOKU_VA_PERMATA = 88560951
+
+
