add API Biller balance and enhance env biller

--- a/.env
+++ b/.env
@@ -44,5 +44,7 @@ BYPASS_DOKU=1
 DOKU_VA_PERMATA = 88560951
 
 LINK_DOKU_BILLER = http://103.10.129.109
+CHANNELCODE_BILLER = 6021
+SHARED_KEY_BILLER = shared123
 
 
