--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Jakarta
 
 DB_CONNECTION=sqlsrv
 DB_HOST=lentick-dev.database.windows.net
