--- a/.env
+++ b/.env
@@ -36,6 +36,7 @@ BLOB_CONTAINER=users
 
 LINK_USER=https://lentick-api-user-dev.azurewebsites.net
 LINK_NOTIF=https://lentick-api-notification-dev.azurewebsites.net
+LINK_FINANCE=https://lentick-api-finance-dev.azurewebsites.net
 
 DOKU_SHARED_KEY=d9E2c5Fc6LSw
 DOKU_MALL_ID=5019
@@ -46,5 +47,6 @@ DOKU_VA_PERMATA = 88560951
 LINK_DOKU_BILLER = http://103.10.129.109
 CHANNELCODE_BILLER = 6021
 SHARED_KEY_BILLER = shared123
-
+LOGIN_NAME_BILLER = agentkopastra
+STRING_BILLER = simpel
 
