enhance order after payment

--- a/.env
+++ b/.env
@@ -41,6 +41,7 @@ LINK_FINANCE=https://lentick-api-finance-dev.azurewebsites.net
 DOKU_SHARED_KEY=d9E2c5Fc6LSw
 DOKU_MALL_ID=5019
 BYPASS_DOKU=1
+PREFIX_PERMATA=88560951
 
 DOKU_VA_PERMATA = 88560951
 
