--- a/.env
+++ b/.env
@@ -51,3 +51,8 @@ SHARED_KEY_BILLER = shared123
 LOGIN_NAME_BILLER = agentkopastra
 STRING_BILLER = simpel
 
+AWO_USER = kopkar_api
+AWO_PASSWORD = kopkar_api123
+AWO_SENDER = KopkarAstra
+AWO_URL_SEND_OTP = https://sms.astraworld.com/awo/api/send_sms.php
+
