--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_TIMEZONE=Asia/Jakarta
 DB_CONNECTION=sqlsrv
 DB_HOST=kai-sql-production.database.windows.net
 DB_PORT=1433
-DB_DATABASE=lendtick
+DB_DATABASE=commerce-prod
 DB_USERNAME=kaiadmindb
 DB_PASSWORD=JB(7y980u0uio^$^&
 
