--- a/.env
+++ b/.env
@@ -41,9 +41,9 @@ LINK_FINANCE=https://commerce-kai-finance.azurewebsites.net
 DOKU_SHARED_KEY=d9E2c5Fc6LSw
 DOKU_MALL_ID=5019
 BYPASS_DOKU=1
-PREFIX_PERMATA=88560951
+PREFIX_PERMATA=88561083
 
-DOKU_VA_PERMATA = 88560951
+DOKU_VA_PERMATA=88561083
 
 LINK_DOKU_BILLER = http://103.10.129.109
 CHANNELCODE_BILLER = 6021
