--- a/.env
+++ b/.env
@@ -46,11 +46,11 @@ PREFIX_PERMATA=88561083
 
 DOKU_VA_PERMATA=88561083
 
-LINK_DOKU_BILLER = http://103.10.129.109
-CHANNELCODE_BILLER = 6021
-SHARED_KEY_BILLER = shared123
-LOGIN_NAME_BILLER = agentkopastra
-STRING_BILLER = simpel
+LINK_DOKU_BILLER=https://simpel.doku.com
+CHANNELCODE_BILLER=6021
+SHARED_KEY_BILLER=shared123
+LOGIN_NAME_BILLER=agentkopastra
+STRING_BILLER=ftvPtmeN4kXQh4u
 
 AWO_USER = kopkar_api
 AWO_PASSWORD = kopkar_api123
