add channel logs using telegram

--- a/.env
+++ b/.env
@@ -57,5 +57,9 @@ AWO_PASSWORD = kopkar_api123
 AWO_SENDER = KopkarAstra
 AWO_URL_SEND_OTP = https://sms.astraworld.com/awo/api/send_sms.php
 
+LOG_SLACK_WEBHOOK_URL=https://hooks.slack.com/services/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
 
 SENTRY_LARAVEL_DSN=https://3319be3c748c4b10849321322f3bd362@sentry.io/1508044
+
+TELEGRAM_TOKEN=913455004:AAES01ANZ3KzrW6rY5LY7dlEI3BEi_m7a6Y
+TELEGRAM_CHAT_ID=-456562390
